--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@ str = `
 window.yandex?.i18n?.getUILanguage?.() = ${window.yandex?.i18n?.getUILanguage?.()}<br>
 window.chrome?.i18n?.getUILanguage?.() = ${window.chrome?.i18n?.getUILanguage?.()}<br>
 navigator.language = ${navigator.language}<br>
+navigator.languages = ${navigator.languages}<br>
 `;
 document.write(str);
 </script>
