--- a/index.html
+++ b/index.html
@@ -1,3 +1,8 @@
+<style>
+    body {
+        font-size: 2.7vw;
+    }
+</style>
 <script>
 str = `
 window.yandex?.i18n?.getUILanguage?.() = ${window.yandex?.i18n?.getUILanguage?.()}<br>
