--- a/index.html
+++ b/index.html
@@ -1,14 +1,8 @@
-<style>
-    body {
-        font-size: 2.5vw;
-    }
-</style>
-<script>
-str = `
-window.yandex?.i18n?.getUILanguage?.() = ${window.yandex?.i18n?.getUILanguage?.()}<br>
-window.chrome?.i18n?.getUILanguage?.() = ${window.chrome?.i18n?.getUILanguage?.()}<br>
-navigator.language = ${navigator.language}<br>
-navigator.languages = ${navigator.languages}<br>
-`;
-document.write(str);
-</script>
+<head>
+  <style>
+      body {
+          font-size: 2.7vw;
+      }
+  </style>
+  <script src="index.js"></script>
+</head>
